--- a/styleGeneral.css
+++ b/styleGeneral.css
@@ -6,17 +6,17 @@
 }
 body{
     box-sizing: border-box;
-    padding-left: 100px;
-    padding-top: 75px;
+    padding-left: 5vw;
+    padding-top: 3vw;
     background-color: #202020;
-    box-shadow: inset 0 0 100px black;
+    box-shadow: inset 0 0 5vw black;
 }
 h2{
     text-align: start;
-    margin-top: 10px;
-    margin-left: 100px;
+    margin-top: 0.5vw;
+    margin-left: 0.25vw;
     font-weight: 500;
-    font-size: 40px;
+    font-size: 2vw;
 }
 .HeaderDiv{
     z-index: 2;
@@ -27,18 +27,18 @@ h2{
     position: fixed;
     display: flex;
     flex-direction: row;
-    height: 75px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.637);
-    box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.452);
+    height: 4vw;
+    border-bottom: 0.1vw solid rgba(0, 0, 0, 0.637);
+    box-shadow: 0.5vw 0px 1vw rgba(0, 0, 0, 0.452);
 }
 .HeaderDiv img{
-    margin-left: 12.5px;
-    border: 3px solid black;
+    margin-left: 0.5vw;
+    border: 0.15vw solid black;
     border-radius: 50%;
     filter: brightness(90%);
-    width: 65px;
-    height: 65px;
-    margin-top: 2.5px;
+    width: 3.5vw;
+    height: 3.5vw;
+    margin-top: 0.1vw;
     transition: 0.15s;
 }
 .HeaderDiv img:hover{
@@ -50,7 +50,7 @@ h2{
     justify-content: start;
 }
 .TitleDiv h2{
-    margin-left: 15px;
+    margin-left: 1vw;
 }
 .NavigationDiv{
     display: flex;
@@ -60,19 +60,19 @@ h2{
 .NavigationDiv p{
     display: inline-block;
     flex: 1;
-    margin-right: 20px;
-    margin-left: 10px;
-    margin-top: 20px;
-    font-size: 20px;
+    margin-right: 1vw;
+    margin-left: 0.5vw;
+    margin-top: 1vw;
+    font-size: 1vw;
     justify-content: space-between;
     transition: 0.15s;
 }
 .NavigationDiv p:hover{
     transition: 0.15s;
     cursor: pointer;
-    font-size: 25px;
+    font-size: 1.2vw;
     color: rgb(156, 17, 17);
-    text-shadow: -1px 3px 5px black;
+    text-shadow: -0.1vw 0.15vw 0.25vw black;
 }
 
 
@@ -82,68 +82,67 @@ h2{
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 100px;
-    top: 75px;
+    width: 5vw;
+    top: 4vw;
     bottom: 0;
     left: 0;
     z-index: 2;
     background-color: #242424;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.452);
+    box-shadow: 0 0.5vw 1vw rgba(0, 0, 0, 0.452);
 }
 .IconDiv{
-    padding: 5px;
-    margin-top: 20px;
+    padding: 0.2vw;
+    margin-top: 1vw;
     background-color: #404040;
-    border: 4px solid black;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.493);
+    border: 0.3vw solid black;
+    box-shadow: 0 0 0.5vw rgba(255, 255, 255, 0.493);
     border-radius: 50%;
     transition: 0.5s;
 }
 .IconDiv:hover{
     background-color: rgb(225, 225, 225);
-    box-shadow: 0 0 20px rgb(0, 0, 0);
+    box-shadow: 0 0 1vw rgb(0, 0, 0);
     border-color: rgb(56, 56, 56);
     transition: 0.2s;
 }
 
 .SidebarDiv img{
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    width: 30px;
+    margin: 0.5vw 0.5vw 0.2vw 0.5vw;
+    width: 1.5vw;
     
 }
 
 
 .StartDiv{
-    display: flex;
-    flex-direction: row;
-    vertical-align: top;
-    justify-content: space-between;
-    margin-top: 50px;
 
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 2.5vw;
+    justify-content: center;
+    margin-top: 2.5vw; 
+    padding: 0 2vw 0 2vw;  
 }
+
 .EntranceDiv{
+    margin: 2vw 0 2vw 0;
+    display: flex;
+    justify-content: center;
     z-index: 0;
     background-color: black;
-    border: 5px solid black;
-    border-radius: 10px;
-    margin-left: 100px;
-    width: 70%;
-    height: 70%;
+    border: 0.25vw solid black;
+    border-radius: 0.5vw;
     position: relative;
-    margin-right: 10px;
-
 }
+
 .EntranceDiv h2{
-    margin-left: 20px;
-    font-size: 30px;
+    margin-left: 1vw;
+    font-size: 1.5vw;
 }
 .EntranceDiv img{
     z-index: 0;
     width: 100%;
     height: 100%;
-    border-radius: 10px;  
+    border-radius: 0.5vw;  
     filter: brightness(50%);
     transition: filter 0.2s;
 }
@@ -160,39 +159,38 @@ h2{
 .EntranceTextDiv{
     z-index: 1;
     position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 20px;
-    line-height: 30px;
+    bottom: 1vw;
+    right: 1vw;
+    font-size: 1vw;
+    line-height: 1.5vw;
 }
 .HighlightRed{
-    font-size: 25px;
+    font-size: 1.7vw;
     color: rgb(156, 17, 17);
 }
 .HighlightBlue{
-    font-size: 25px;
+    font-size: 1.7vw;
     color: rgb(48, 146, 212);
 }
 .AbilitiesDiv{
-    margin-right: 100px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    margin: 2vw 0 2vw 0;
+    border-radius: 0.5vw;
+    display: grid;
+    grid-template-columns: 1fr;
     position: relative;
     text-align: center;
-    border:5px solid black;
+    border: 0.25vw solid black;
     background-color:rgb(19, 1, 16);
-    box-shadow: inset 0 0 30px black;
-    padding-bottom: 10px;
+    box-shadow: inset 0 0 2.5vw black;
+    padding-bottom: 0.5vw;
 }
 .AbilityDiv{
     display: flex;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-radius: 10px;
-    border: 3px rgb(73, 20, 20) solid;
-    padding: 10px 10px;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    border-radius: 0.5vw;
+    border: 0.15vw rgb(73, 20, 20) solid;
+    padding: 0.5vw 0.5vw;
     background-color: rgba(44, 12, 12, 0.377);
     transition: 0.15s;
 }
@@ -201,14 +199,17 @@ h2{
     cursor: pointer;
 }
 .AbilityDiv img{
-    border: 2px solid black;
-    box-shadow: 0 0 10px black;
+    height: 100%;
+    width: 13%;
+    border: 0.1vw solid black;
+    box-shadow: 0 0 0.5vw black;
     transition: 0.15s;
 }
 .AbilityDiv h4{
-    margin: 20px 20px 0 20px ;
+    font-size: 1vw ;
+    margin: 1vw 1vw 0 1vw ;
     font-weight: 500;
-    min-width: 200px;
+    min-width: 0.5vw;
     transition: 0.15s;  
 }
 .AbilityDiv h4:hover{
@@ -216,41 +217,42 @@ h2{
     transition: 0.15s;
 }
 .AbilitiesTitleDiv h3{
-    font-size: 40px;
+    font-size: 2vw;
     font-weight: 500;
 }
 
 
 
 
+
 .DisplayDiv{
-    margin-top: 50px;
+    margin-top: 1vw;
+    margin-bottom: 2vw;
     display: grid;
     justify-content: center;
-    grid-template-columns: 700px 700px  ;
-    column-gap: 100px;
-    row-gap: 100px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row-gap: 2vw;
+    column-gap: 2vw;
+    padding: 0 2.5vw 0 2.5vw;
 }
 .PreviewDiv{
     position: relative;
-    width: 700px;
-    height: 406px;
-    border: 5px solid rgba(0, 0, 0, 0.473);
-    border-radius: 10px;
+    border: 0.25vw solid rgba(0, 0, 0, 0.473);
+    border-radius: 0.5vw;
     transition: border 0.15s, color 0.15s;
     color: rgb(219, 219, 219);
-    font-size: 40px;
+    font-size: 2vw;
     display: flex;
     justify-content: center;
 }
 .PreviewDiv:hover{
     transition: border 0.15s, color 0.15s;
     cursor: pointer;
-    border: 5px solid black;
+    border: 0.25vw solid black;
     color: rgb(172, 172, 172);
 }
 .PreviewDiv img{
-    border-radius: 4px;
+    border-radius: 0.3vw;
     object-fit: fill;
     filter: brightness(100%);
     width: 100%;
@@ -258,28 +260,28 @@ h2{
     filter: brightness(50%);
 }
 .PreviewDiv img:hover{
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.452);
+    box-shadow: 0.5vw 0.5vw 0.5vw rgba(0, 0, 0, 0.452);
     filter: brightness(60%);
     transition: filter 0.15s;
 }
 .AbsoluteTextDiv{
     position: absolute;
     bottom: 0;
-    right: 25px;
+    right: 1vw;
 }
 
 
 
 .BottomDiv{
-    margin-top: 30px;
+    margin-top: 1.5vw;
     display: flex;
     text-align: center;
-    border-top: 2px solid black ;
+    border-top: 0.1vw solid black ;
 }
 .BottomDiv p{
     flex: 1;
-    margin: 40px 0 40px 0;
-    font-size: 20px ;
+    margin: 2vw 0 2vw 0;
+    font-size: 1vw ;
 }
 
 
