--- a/styles/GeneralPfrofile.css
+++ b/styles/GeneralPfrofile.css
@@ -2,7 +2,7 @@
     font-family: Permanent Marker;
     padding: 0;
     margin: 0;
-    color: rgb(225, 225, 225);
+    color: #e7d0a8;
 }
 body{
     box-sizing: border-box;
