--- a/styles/Messages.css
+++ b/styles/Messages.css
@@ -2,7 +2,8 @@ body{
     background-image: url(MessagesBack.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed; 
-    background-size: 100% 100%;
+    background-position: center;
+    background-size: 100% 115%;
 }
 .ChatsGridDiv{
     display: grid;
