--- a/styles/GeneralPfrofile.css
+++ b/styles/GeneralPfrofile.css
@@ -7,7 +7,8 @@
 body{
     box-sizing: border-box;
     background-color: #202020;
-    box-shadow: inset 0 0 5vw black;
+    padding-left: 5vw;
+    padding-top: 4vw;
 }
 h2{
     text-align: start;
