--- a/styles/HSF.css
+++ b/styles/HSF.css
@@ -37,7 +37,8 @@
     flex: 2;
     flex-shrink: 0;
 }
-.NavigationDiv p{
+.NavigationDiv a{
+    text-decoration: none;
     display: inline-block;
     flex: 1;
     margin-right: 1vw;
@@ -47,7 +48,7 @@
     justify-content: space-between;
     transition: 0.15s;
 }
-.NavigationDiv p:hover{
+.NavigationDiv a:hover{
     transition: 0.15s;
     cursor: pointer;
     font-size: 1.2vw;
