--- a/styles/Post.css
+++ b/styles/Post.css
@@ -1,8 +1,9 @@
 body{
-    background-image: url(PostBack.jpg);
+    background-image: url(../img/PostBack.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed; 
-    background-size: 100% 100%;
+    background-position: center;
+    background-size: 100%;
 }
 .ContainerDiv{
     padding-top: 6vw;
